@@ -2023,3 +2023,5 @@
            gentity fields
 * pheno:   added mcwf's code for additional font characters from 0x7F to 0xFF
 * pheno:   Lua API: fixed et_Print() callback won't run on G_LogPrintf()
+* pheno:   hopefully fixed the bug that keeps XPSave from loading stored XP
+           at the time of client initial connect
